fix top gap of the cover when clicking on the image

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -533,7 +533,9 @@ hr {
   .image-slider-zoomed-cover {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
+    top:0;
+    left:0;
     opacity: 80%;
     z-index: 11;
     background-color: var(--black);
