--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-body {
+body, html {
   margin: 0;
   padding: 0;
 }
@@ -30,5 +30,6 @@ body {
 @media only screen and (min-width: 1024px) {
   body {
     margin: 0 10% 0% 10%;
+    overflow: hidden;
   }
 }
